# LANGCHAIN_EVALUATION_SUITE

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  extracted.js  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/patterns/: 01_prompt.md  02_chaining.md  03_rag.md  04_memory.md  05_tools.md  06_documents.md  07_parsers.md  08_agent.md  08_chain_pipeline.md  09_agent.md  09_multiagent.md  10_langgraph.md  10_workflow.md
frontend/: index.html
frontend/pages/: advanced-rag.html  agentic-rag.html  app.js  graph-rag.html  home.html  hybrid-rag.html  langchain.html  naive-rag.html  rag-evaluation.html  styles.css  summary.html
lc/: routes.py
rag/: routes.py
sample_docs/: advanced_rag_fail.txt  advanced_rag_pass.txt  advanced_rag_prompt.txt  doc1_ai_research_report.txt  doc2_product_operations_manual.txt  graph_rag_doc1_teams.txt  graph_rag_doc2_tech_stack.txt  graph_rag_doc3_projects.txt  graph_rag_doc4_security.txt  graph_rag_fail.txt  graph_rag_pass.txt  graph_rag_prompt.txt  hybrid_rag_fail.txt  hybrid_rag_pass.txt  hybrid_rag_prompt.txt  query_guide.md
src/: config.py
src/rag/: routes.py
tests/: conftest.py  test_01_prompt.py  test_02_chaining.py  test_03_rag.py  test_04_memory.py  test_05_tools.py  test_06_documents.py  test_07_parsers.py  test_08_agent.py  test_08_chain_pipeline.py  test_09_agent.py  test_09_multiagent.py  test_10_workflow.py  test_langgraph.py  test_memory.py  test_rag_endpoints.py  test_rag_utils.py  test_shared_tools.py
(+20 files in other folders)
